--- a/templates/base.html
+++ b/templates/base.html
@@ -7,20 +7,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <style>
         body {
-            background-color: #2C2C2C; /* Темно-серый фон */
-            color: #E0E0E0; /* Светло-серый текст */
+            background-color: #2C2C2C; 
+            color: #E0E0E0;
         }
 
         .navbar {
-            background-color: #3A3A3A !important; /* Серый фон навигации */
+            background-color: #3A3A3A !important; 
         }
 
         .navbar a {
-            color: #E0E0E0 !important; /* Светло-серый цвет текста в навбаре */
+            color: #E0E0E0 !important;
         }
 
         .navbar a:hover {
-            color: #C0C0C0 !important; /* Светлее при наведении */
+            color: #C0C0C0 !important;
         }
 
         .form-control {
